-- Budget API Database Schema
-- Drop all tables if they exist (cascade to avoid FK errors)
DROP TABLE IF EXISTS "audit_logs" CASCADE;
DROP TABLE IF EXISTS "alerts" CASCADE;
DROP TABLE IF EXISTS "tags" CASCADE;
DROP TABLE IF EXISTS "contacts" CASCADE;
DROP TABLE IF EXISTS "loans" CASCADE;
DROP TABLE IF EXISTS "goals" CASCADE;
DROP TABLE IF EXISTS "budget_periods" CASCADE;
DROP TABLE IF EXISTS "budgets" CASCADE;
DROP TABLE IF EXISTS "categories" CASCADE;
DROP TABLE IF EXISTS "recurring_patterns" CASCADE;
DROP TABLE IF EXISTS "transactions" CASCADE;
DROP TABLE IF EXISTS "accounts" CASCADE;
DROP TABLE IF EXISTS "users" CASCADE;

CREATE TABLE "users" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "username" varchar UNIQUE NOT NULL,
  "email" varchar UNIQUE NOT NULL,
  "password_hash" varchar NOT NULL,
  "default_currency" int DEFAULT 1,
  "timezone" varchar,
  "dark_mode" boolean DEFAULT false,
  "is_active" boolean DEFAULT true,
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp DEFAULT (now()),
  "last_login" timestamp
);

CREATE TABLE "transactions" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" int NOT NULL,
  "account_id" int NOT NULL,
  "type" varchar NOT NULL,
  "status" varchar NOT NULL,
  "amount" numeric(12,2) NOT NULL,
  "currency" int DEFAULT 1,
  "category_id" int,
  "description" varchar NOT NULL,
  "merchant_name" varchar,
  "location" varchar,
  "notes" varchar,
  "transaction_date" timestamp NOT NULL,
  "posted_date" timestamp NOT NULL,
  "updated_at" timestamp DEFAULT (now()),
  "recurring_id" int,
  "related_account_id" int,
  "related_entity_id" int,
  "related_entity_type" varchar,
  "tags" json
);

CREATE TABLE "recurring_patterns" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "transaction_id" int NOT NULL,
  "frequency" varchar NOT NULL,
  "day_of_month" int,
  "day_of_week" int,
  "next_occurrence" timestamp NOT NULL,
  "end_date" timestamp,
  "active" boolean DEFAULT true,
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp DEFAULT (now())
);

CREATE TABLE "accounts" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" int NOT NULL,
  "name" varchar NOT NULL,
  "type" varchar NOT NULL,
  "institution_name" varchar,
  "starting_balance" numeric(12,2) DEFAULT 0,
  "current_balance" numeric(12,2) DEFAULT 0,
  "expected_balance" numeric(12,2) DEFAULT 0,
  "currency" int,
  "is_active" boolean DEFAULT true,
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp DEFAULT (now())
);

CREATE TABLE "categories" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" int NOT NULL,
  "name" varchar NOT NULL,
  "type" varchar NOT NULL,
  "parent_category_id" int,
  "icon" varchar,
  "color" varchar,
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp DEFAULT (now())
);

CREATE TABLE "budgets" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" int NOT NULL,
  "category_id" int NOT NULL,
  "name" varchar NOT NULL,
  "budget_amount" numeric(12,2) NOT NULL,
  "frequency" varchar NOT NULL,
  "rollover_enabled" boolean DEFAULT false,
  "rollover_amount" numeric(12,2),
  "alert_threshold" numeric(12,2),
  "start_date" timestamp NOT NULL,
  "end_date" timestamp,
  "is_active" boolean DEFAULT true,
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp DEFAULT (now())
);

CREATE TABLE "budget_periods" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "budget_id" int NOT NULL,
  "period_start" timestamp NOT NULL,
  "period_end" timestamp NOT NULL,
  "allocated_amount" numeric(12,2) NOT NULL,
  "spent_amount" numeric(12,2) DEFAULT 0,
  "remaining_amount" numeric(12,2),
  "rollover_from_previous" numeric(12,2),
  "rollover_to_next" numeric(12,2),
  "status" varchar DEFAULT 'active'
);

CREATE TABLE "goals" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" int NOT NULL,
  "name" varchar NOT NULL,
  "description" varchar,
  "target_amount" numeric(12,2) NOT NULL,
  "current_amount" numeric(12,2) DEFAULT 0,
  "contribution_amount" numeric(12,2),
  "contribution_frequency" varchar,
  "start_date" timestamp NOT NULL,
  "target_date" timestamp,
  "status" varchar DEFAULT 'active',
  "priority" int DEFAULT 0,
  "auto_contribute" boolean DEFAULT false,
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp DEFAULT (now())
);

CREATE TABLE "loans" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" int NOT NULL,
  "name" varchar NOT NULL,
  "principal_amount" numeric(12,2) NOT NULL,
  "remaining_amount" numeric(12,2) NOT NULL,
  "interest_rate" numeric(5,2) NOT NULL,
  "minimum_payment" numeric(12,2),
  "payment_frequency" varchar,
  "next_payment_date" timestamp,
  "start_date" timestamp NOT NULL,
  "end_date" timestamp,
  "status" varchar NOT NULL,
  "notes" varchar,
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp DEFAULT (now())
);

CREATE TABLE "contacts" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" int NOT NULL,
  "name" varchar NOT NULL,
  "email" varchar,
  "phone" varchar,
  "notes" varchar,
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp DEFAULT (now())
);

CREATE TABLE "tags" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" int NOT NULL,
  "name" varchar NOT NULL,
  "color" varchar,
  "created_at" timestamp
);

CREATE TABLE "alerts" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" int NOT NULL,
  "type" varchar NOT NULL,
  "title" varchar NOT NULL,
  "message" varchar,
  "related_entity_type" varchar,
  "related_entity_id" int,
  "status" varchar DEFAULT 'unread',
  "created_at" timestamp DEFAULT (now()),
  "read_at" timestamp
);

CREATE TABLE "audit_logs" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" int NOT NULL,
  "entity_type" varchar NOT NULL,
  "entity_id" int NOT NULL,
  "action" varchar NOT NULL,
  "old_value" json,
  "new_value" json,
  "ip_address" varchar,
  "timestamp" timestamp DEFAULT (now())
);

CREATE INDEX ON "transactions" ("user_id");

CREATE INDEX ON "transactions" ("account_id");

CREATE INDEX ON "transactions" ("category_id");

CREATE INDEX ON "transactions" ("transaction_date");

CREATE INDEX ON "transactions" ("type");

CREATE INDEX ON "transactions" ("status");

CREATE INDEX ON "accounts" ("user_id");

CREATE INDEX ON "categories" ("user_id");

CREATE INDEX ON "budgets" ("user_id");

CREATE INDEX ON "budgets" ("category_id");

CREATE INDEX ON "budget_periods" ("budget_id");

CREATE INDEX ON "budget_periods" ("period_start");

CREATE INDEX ON "goals" ("user_id");

CREATE INDEX ON "goals" ("status");

CREATE INDEX ON "loans" ("user_id");

CREATE INDEX ON "contacts" ("user_id");

CREATE INDEX ON "tags" ("user_id");

CREATE INDEX ON "alerts" ("user_id");

CREATE INDEX ON "alerts" ("status");

CREATE INDEX ON "audit_logs" ("user_id");

CREATE INDEX ON "audit_logs" ("timestamp");

ALTER TABLE "transactions" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "transactions" ADD FOREIGN KEY ("account_id") REFERENCES "accounts" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "transactions" ADD FOREIGN KEY ("category_id") REFERENCES "categories" ("id") ON DELETE SET NULL DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "transactions" ADD FOREIGN KEY ("related_account_id") REFERENCES "accounts" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "transactions" ADD FOREIGN KEY ("recurring_id") REFERENCES "recurring_patterns" ("id") ON DELETE SET NULL DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "recurring_patterns" ADD FOREIGN KEY ("transaction_id") REFERENCES "transactions" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "accounts" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "categories" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "categories" ADD FOREIGN KEY ("parent_category_id") REFERENCES "categories" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "budgets" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "budgets" ADD FOREIGN KEY ("category_id") REFERENCES "categories" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "budget_periods" ADD FOREIGN KEY ("budget_id") REFERENCES "budgets" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "goals" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "loans" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "contacts" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "tags" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "alerts" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "audit_logs" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;
