// Budget API - Simplified Database Schema
// DBML for dbdiagram.io
// Uses unified transaction model for cleaner design

Table users {
  id int [primary key, increment]
  username varchar [not null, unique]
  email varchar [not null, unique]
  password_hash varchar [not null]
  default_currency int [default: 1]
  timezone varchar [null]
  dark_mode boolean [default: false]
  is_active boolean [default: true]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  last_login timestamp [null]
}

// All financial activity flows through transactions
// Type field determines how it's treated: income, expense, transfer, pending_in, pending_out, goal_contribution, loan_payment, refund
Table transactions {
  id int [primary key, increment]
  user_id int [not null]
  account_id int [not null]
  type varchar [not null] // income, expense, transfer, pending_in, pending_out, goal_contribution, loan_payment, refund
  status varchar [not null] // pending, confirmed, scheduled, cancelled
  amount double [not null]
  currency int [default: 1]
  category_id int [null]
  
  // Core details
  description varchar [not null]
  merchant_name varchar [null]
  location varchar [null]
  notes varchar [null]
  
  // Timing
  transaction_date timestamp [not null] // When it happens/happened
  posted_date timestamp [not null] // When user created/posted it
  updated_at timestamp [default: `now()`]
  
  // Recurring (if recurring_id is not null, it's recurring)
  recurring_id int [null]
  
  // Related entities
  related_account_id int [null] // For transfers
  related_entity_id int [null] // For loans, goals, etc
  related_entity_type varchar [null] // 'loan', 'goal', 'income_source'
  
  tags json [null]
  
  Indexes {
    user_id
    account_id
    category_id
    transaction_date
    type
    status
  }
}

Table recurring_patterns {
  id int [primary key, increment]
  transaction_id int [not null]
  frequency varchar [not null] // daily, weekly, biweekly, monthly, quarterly, yearly
  day_of_month int [null]
  day_of_week int [null]
  next_occurrence timestamp [not null]
  end_date timestamp [null]
  active boolean [default: true]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table accounts {
  id int [primary key, increment]
  user_id int [not null]
  name varchar [not null]
  type varchar [not null] // checking, savings, cash, credit_card, investment
  institution_name varchar [null]
  
  starting_balance double [default: 0]
  current_balance double [default: 0]
  expected_balance double [default: 0] // Includes pending transactions
  
  currency int [null] // Null = uses user's default_currency
  is_active boolean [default: true]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  Indexes {
    user_id
  }
}

Table categories {
  id int [primary key, increment]
  user_id int [not null]
  name varchar [not null]
  type varchar [not null] // expense, income, transfer
  parent_category_id int [null] // For nested categories
  icon varchar [null]
  color varchar [null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  Indexes {
    user_id
  }
}

// Budgets define spending limits per category per time period
Table budgets {
  id int [primary key, increment]
  user_id int [not null]
  category_id int [not null]
  name varchar [not null]
  budget_amount double [not null]
  frequency varchar [not null] // weekly, biweekly, monthly, yearly
  
  rollover_enabled boolean [default: false]
  rollover_amount double [null] // Max amount to roll to next period
  alert_threshold double [null] // Percentage or amount to trigger alert
  
  start_date timestamp [not null]
  end_date timestamp [null]
  is_active boolean [default: true]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  Indexes {
    user_id
    category_id
  }
}

// Tracks each budget period's spending
Table budget_periods {
  id int [primary key, increment]
  budget_id int [not null]
  period_start timestamp [not null]
  period_end timestamp [not null]
  allocated_amount double [not null]
  spent_amount double [default: 0]
  remaining_amount double
  rollover_from_previous double [null]
  rollover_to_next double [null]
  status varchar [default: 'active'] // active, completed, archived
  
  Indexes {
    budget_id
    period_start
  }
}

// Savings goals
Table goals {
  id int [primary key, increment]
  user_id int [not null]
  name varchar [not null]
  description varchar [null]
  target_amount double [not null]
  current_amount double [default: 0]
  contribution_amount double [null]
  contribution_frequency varchar [null] // weekly, monthly, etc
  
  start_date timestamp [not null]
  target_date timestamp [null]
  status varchar [default: 'active'] // active, completed, paused, cancelled
  priority int [default: 0]
  auto_contribute boolean [default: false]
  
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  Indexes {
    user_id
    status
  }
}

// Loan/Debt tracking
Table loans {
  id int [primary key, increment]
  user_id int [not null]
  name varchar [not null]
  principal_amount double [not null]
  remaining_amount double [not null]
  interest_rate double [not null]
  
  minimum_payment double [null]
  payment_frequency varchar [null]
  next_payment_date timestamp [null]
  
  start_date timestamp [not null]
  end_date timestamp [null]
  status varchar [not null] // active, paid_off, defaulted
  
  notes varchar [null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  Indexes {
    user_id
  }
}

// Track contacts who come up frequently (for reminders)
Table contacts {
  id int [primary key, increment]
  user_id int [not null]
  name varchar [not null]
  email varchar [null]
  phone varchar [null]
  notes varchar [null]
  
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  Indexes {
    user_id
  }
}

// Tags for flexible organization
Table tags {
  id int [primary key, increment]
  user_id int [not null]
  name varchar [not null]
  color varchar [null]
  created_at timestamp
  
  Indexes {
    user_id
  }
}

// User alerts and notifications
Table alerts {
  id int [primary key, increment]
  user_id int [not null]
  type varchar [not null] // budget_exceeded, goal_milestone, payment_due, pending_reminder
  title varchar [not null]
  message varchar [null]
  related_entity_type varchar [null] // budget, goal, transaction, loan
  related_entity_id int [null]
  status varchar [default: 'unread'] // unread, read, archived
  created_at timestamp [default: `now()`]
  read_at timestamp [null]
  
  Indexes {
    user_id
    status
  }
}

// Audit log for compliance
Table audit_logs {
  id int [primary key, increment]
  user_id int [not null]
  entity_type varchar [not null]
  entity_id int [not null]
  action varchar [not null] // create, update, delete
  old_value json [null]
  new_value json [null]
  ip_address varchar [null]
  timestamp timestamp [default: `now()`]
  
  Indexes {
    user_id
    timestamp
  }
}

// Foreign Key Relationships

Ref: transactions.user_id > users.id [delete: cascade]
Ref: transactions.account_id > accounts.id [delete: cascade]
Ref: transactions.category_id > categories.id [delete: set null]
Ref: transactions.related_account_id > accounts.id [delete: cascade]
Ref: transactions.recurring_id > recurring_patterns.id [delete: set null]

Ref: recurring_patterns.transaction_id > transactions.id [delete: cascade]

Ref: accounts.user_id > users.id [delete: cascade]

Ref: categories.user_id > users.id [delete: cascade]
Ref: categories.parent_category_id > categories.id

Ref: budgets.user_id > users.id [delete: cascade]
Ref: budgets.category_id > categories.id [delete: cascade]

Ref: budget_periods.budget_id > budgets.id [delete: cascade]

Ref: goals.user_id > users.id [delete: cascade]

Ref: loans.user_id > users.id [delete: cascade]

Ref: contacts.user_id > users.id [delete: cascade]

Ref: tags.user_id > users.id [delete: cascade]

Ref: alerts.user_id > users.id [delete: cascade]

Ref: audit_logs.user_id > users.id [delete: cascade]
